# Blumtap

./: .gitignore  LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  custom.md  feature_request.md
blum_tap_clicker/app/blumtap-app/: .gitignore  package.json  vite.config.js
blum_tap_clicker/app/blumtap-app/src/: App.css  App.jsx  index.css
blum_tap_clicker/app/blumtap-app/src-tauri/: Cargo.toml  tauri.conf.json
blum_tap_clicker/app/blumtap-app/src-tauri/src/: main.rs
blum_tap_clicker/blumtap-app/: index.html  package.json
blum_tap_clicker/blumtap-app/src/: App.jsx  index.css  main.jsx
blum_tap_clicker/blumtap-app/src-tauri/: Cargo.toml  tauri.conf.json
blum_tap_clicker/blumtap-app/src-tauri/src/: main.rs
blum_tap_clicker/blumtap-app/src/components/: login.jsx  main.jsx
blum_tap_clicker/blumtap-app/src/services/: service.js
blum_tap_clicker/blumtap_backend/: manage.py
blum_tap_clicker/blumtap_backend/blumtap/: views.py
blum_tap_clicker/blumtap_backend/blumtap_backend/: settings.py  urls.py  wsgi.py
blum_tap_clicker/blumtap_clicker/: .gitignore  clicker.py  image2base64code.txt
blum_tap_clicker/logic/: .gitignore  README.md  clicker.py  image2base64code.py
blum_tap_clicker/server/: .gitignore  README.md
blum_tap_clicker/server/blumtap/: apps.py  urls.py
blum_tap_clicker/server/blumtap_backend/: asgi.py  settings.py
blumtap/: asgi.py  settings.py  urls.py  wsgi.py
blumtap_backend/: apps.py  settings.py  urls.py  views.py
(+3 files in other folders)
